[gd_scene load_steps=7 format=2]

[ext_resource path="res://juego/micronave.png" type="Texture" id=1]
[ext_resource path="res://juego/micronave-side.png" type="Texture" id=2]
[ext_resource path="res://Nave.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "lado",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.3347
height = 37.1001

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.8707
height = 45.0021

[node name="Nave" type="Area2D"]
position = Vector2( 262.557, 322.847 )
script = ExtResource( 3 )
Velocidad = 300

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.87991, -0.681519 )
scale = Vector2( 0.218507, 0.191478 )
frames = SubResource( 1 )
animation = "frente"

[node name="CollisionShapefrente" type="CollisionShape2D" parent="."]
position = Vector2( 1.33023, -3.43573 )
shape = SubResource( 2 )

[node name="CollisionShapelado" type="CollisionShape2D" parent="."]
position = Vector2( 6.65216, -1.15668 )
rotation = 1.5708
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Nave_body_entered"]
